deprecate methods that now are part of the JDK